# botnet_c

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  README1.md  build_overall.sh
auto_code/: CMakeList.txt  auto_client.c  autorun.sh  install.sh  run_client.c  util.c  util.h
client/: CMakeLists.txt  auto_client.c  auto_client.h  auto_client_trinity  autorun.service  build_client.sh  client_functions.c  install.sh  util.h
code/autorun/: README.md  a.out  autorun.sh  autorun.timer  find_mac  find_mac.c  find_mac.h
example_botnet/: client  client.c  example_client  find_mac.tar.xz  server.c
extra_files/example_botnet/: client.c  server.c  start.sh
extra_files/references/: find_mac.h
references/: find_mac.c
server/: CMakeLists.txt  build_server.sh  server  server.c  server.h  server_functions.c  server_functions.h  util.c  util.h
test/: CMakeLists.txt  test_client.c  test_server.c  test_util.c
util/: CMakeLists.txt  util.c  util.h
